static c-arcmt-test.c

--- a/clang/tools/c-arcmt-test/CMakeLists.txt
+++ b/clang/tools/c-arcmt-test/CMakeLists.txt
@@ -2,17 +2,16 @@ add_clang_executable(c-arcmt-test
   c-arcmt-test.c
   )
 
-if (LLVM_BUILD_STATIC)
-  target_link_libraries(c-arcmt-test
-    PRIVATE
-    libclang_static
-    )
-else()
-  target_link_libraries(c-arcmt-test
-    PRIVATE
-    libclang
-    )
-endif()
+target_link_libraries(c-arcmt-test
+  PRIVATE
+  libclang
+  clangAST
+  clangBasic
+  clangCodeGen
+  clangFrontend
+  clangIndex
+  clangSerialization
+)
 
 set_target_properties(c-arcmt-test
   PROPERTIES
